[package]
name = "sourcerer"
version = "1.0.1"
edition = "2024"
description = "Send files like a sorcerer"
homepage = "https://github.com/dotzenith/sourcerer"
repository = "https://github.com/dotzenith/sourcerer"
license = "MIT"

[[bin]]
name = "sr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.2", features = ["derive"] }
directories = "6.0.0"
futures-lite = "2.6.1"
indicatif = "0.18.6"
iroh = "1.0.2"
iroh-blobs = "0.103.0"
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.4", features = ["full"] }
toml = "1.1.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
